--- a/src/Navigation.scss
+++ b/src/Navigation.scss
@@ -1,9 +1,15 @@
 @import 'styles/_variables.scss';
 
 nav.navbar {
-    min-height: 50px;
+    height: 50px;
     border-radius: 0;
-    border: 1px solid transparent;
+    border: none;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding-top: 10px;
+    z-index: 999;
     .navbar-brand {
       color: $color-gray-darker;
       font-size: $larger-font-size;
@@ -34,6 +40,7 @@ nav.navbar {
 
 nav.navbar.navbar-fixed-top {
 	height: 35px;
+  padding-top: 0;
   .navbar-brand {
     font-size: $title-font-size;
     float: left;
@@ -54,6 +61,7 @@ nav.navbar.navbar-fixed-top {
     }
   }
   nav.navbar{
+    padding-top: 0;
     .navbar-brand {
       font-size: $title-font-size;
       float: none;
