--- a/src/project/Header.scss
+++ b/src/project/Header.scss
@@ -12,6 +12,13 @@ header{
     width: 100%;
     margin: 0 auto 30px;
     padding: 60px 0;
+    margin-top:70px;
+    @media screen and (max-width: 767px) {
+      margin-top:110px;
+    }
+    @media screen and (max-width: 300px) {
+      margin-top:150px;
+    }
   h1{
     font-size: $larger-font-size;
     letter-spacing: normal;
